Quick temporary fix for expiring token issue. Align menu items to the right when viewing on mobile.

--- a/src/pages/Parent/Parent.scss
+++ b/src/pages/Parent/Parent.scss
@@ -44,6 +44,7 @@
 
     .navbar-nav {
         margin: auto;
+        text-align: right;
     }
 
     a {
